--- a/contato.html
+++ b/contato.html
@@ -18,49 +18,53 @@
 </head>
 <body>
     <!----header-->
-    <section>
-        <header>
-            <div>
-                <div class="content">
-                    <img src="./images/logo.png" class="img-fluid" id="logo">
-                    <div class="header-content menu-desktop">
-                        <ul class="header-list">
-                            <li class="mr-3 item-list">
+    <header>
+        <div class="content">
+            <img src="./images/logo.png" class="img-fluid" id="logo">
+            <nav id="nav">
+                <button 
+                aria-label="Abrir menu"
+                aria-haspopup="true" 
+                aria-controls="menu" 
+                aria-expanded="false"
+                id="btn-mobile">Menu <span id="hamburguer"></span></button>
+                    <div class="header-content">
+                        <ul class="header-list" id="menu" role="menu">
+                            <li class=" item-list">
                                 <a href="index.html">
                                     <small>Home</small>
                                 </a>
                             </li>
-                            <li class="mr-3 item-list">
+                            <li class=" item-list">
                                 <a href="estrutural.html">
                                     <small>Engenharia Estrutural</small>
                                 </a>
                             </li>
-                            <li class="mr-3 item-list">
+                            <li class="item-list">
                                 <a href="diagnostica.html">
                                     <small>Engenharia Diagnóstica</small>
                                 </a>
                             </li>
-                            <li class="mr-3 item-list">
+                            <li class="item-list">
                                 <a href="seniorliving.html">
                                     <small>Sênior Living</small>
                                 </a>
                             </li>
-                            <li class="mr-3 item-list">
+                            <li class=" item-list">
                                 <a href="contato.html">
                                     <small>Contato</small>
                                 </a>
                             </li>
                         </ul>
                     </div>
-                </div>
+                </nav>
             </div>
-        </header>
-    </section>
+    </header>
     
     <!----hero-->
     <section>
         <div class='img-fluid' id="hero">
-            <div class="infos-hero col-6">
+            <div class="infos-hero col-7">
                 <div class="texts-hero">
                     <h2>Vai construir ou reformar? </h2>
                     <br>
@@ -75,6 +79,7 @@
 
     <!----main-->
     <main>
+        
         <section class="main-home">
             <div class="clients">
                 <h2>Clientes comerciais</h2>
@@ -82,6 +87,7 @@
                 <img id="clients-2"src="./images/clientes2.png">
             </div>
         </section>
+
         <section class="main-form">
             <h2>Entre em contato e solicite um orçamento!</h2>
             <div class="main-form-content">
@@ -113,7 +119,7 @@
                     <div class="form-infos" >
                         <h4>Possuímos uma equipe pronta para te atender da melhor maneira possível!</h4>
                         <br>
-                        <h4>Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do formulário ao lado</h4>
+                        <h4 id="h4-form">Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do formulário ao lado</h4>
                        <div class="container">    
                             <div class="button-wpp">
                                 <a href="#"> 
@@ -174,6 +180,13 @@
                 </a>
             </div> 
         </div>
+        <div class="created">
+            <a href="https://github.com/Lincoln-Modesto" target="_blank">
+                <img src="images/github.png">
+                <span>&nbsp Lincoln Modesto</span>
+            </a>
+        </div>
     </footer>
 </body>
+<script src="js/buttonMobile.js" type="text/javascript"></script> 
 </html>
