--- a/index.html
+++ b/index.html
@@ -21,50 +21,53 @@
 
     <body>
     <!----header-->
-        <section>
-            <header>
-                <div>
-                    <div class="content">
-                        <img src="./images/logo.png" class="img-fluid" id="logo">
-                        <div class="header-content menu-desktop">
-                            <ul class="header-list">
-                                <li class="mr-3 item-list">
+        <header>
+            <div class="content">
+                <img src="./images/logo.png" class="img-fluid" id="logo">
+                <nav id="nav">
+                    <button 
+                    aria-label="Abrir menu"
+                    aria-haspopup="true" 
+                    aria-controls="menu" 
+                    aria-expanded="false"
+                    id="btn-mobile">Menu <span id="hamburguer"></span></button>
+                        <div class="header-content">
+                            <ul class="header-list" id="menu" role="menu">
+                                <li class=" item-list">
                                     <a href="index.html">
                                         <small>Home</small>
                                     </a>
                                 </li>
-                                <li class="mr-3 item-list">
+                                <li class=" item-list">
                                     <a href="estrutural.html">
                                         <small>Engenharia Estrutural</small>
                                     </a>
                                 </li>
-                                <li class="mr-3 item-list">
+                                <li class="item-list">
                                     <a href="diagnostica.html">
                                         <small>Engenharia Diagnóstica</small>
                                     </a>
                                 </li>
-                                <li class="mr-3 item-list">
+                                <li class="item-list">
                                     <a href="seniorliving.html">
                                         <small>Sênior Living</small>
                                     </a>
                                 </li>
-                                <li class="mr-3 item-list">
+                                <li class=" item-list">
                                     <a href="contato.html">
                                         <small>Contato</small>
                                     </a>
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </nav>
                 </div>
-            
-            </header>
-        </section>
+        </header>
 
     <!----hero-->
         <section>
             <div class='img-fluid' id="hero">
-                <div class="infos-hero col-6">
+                <div class="infos-hero col-7">
                     <div class="texts-hero">
                         <h2>Vai construir ou reformar? </h2>
                         <br>
@@ -81,18 +84,13 @@
         <main>
             <section class="main-home">
                 <img class="img-fluid" src="./images/img-exp.png">
-                <div>
+                <div class="main-list">
                     <h2>Expertise em Engenharia</h2>
                     <ul>
-                        <li>Autovistoria e Inspeções Prediais;</li>
-                        <li>Fundações  e  Sondagem;</li>
-                        <li>Retrofit e Manutenção Predial;</li>
-                        <li>Projetos de Engenharia Estrutural;</li>
-                        <li>Projetos de Subsistemas Prediais;</li>
-                        <li>Laudos, Perícia Estrutural e <br> 
-                            Engenharia Diagnóstica;</li>
-                        <li>Obras Expressas;</li>
-                        <li>Cursos e Treinamentos.</li>
+                        <li>Recuperação e Reforço Estrutural;;</li>
+                        <li>Autovistoria e Inspeções Condominial;</li>
+                        <li>Laudos e Engenharia Diagnóstica;</li>
+                        <li>Senior Living;</li>  
                     </ul>
                 </div>
             </section>
@@ -140,7 +138,13 @@
                 </a>
             </div> 
         </div>
+        <div class="created">
+            <a href="https://github.com/Lincoln-Modesto" target="_blank">
+                <img src="images/github.png">
+                <span>&nbsp Lincoln Modesto</span>
+            </a>
+        </div>
     </footer>
     </body>
-
+    <script src="js/buttonMobile.js" type="text/javascript"></script> 
 </html>
