--- a/diagnostica.html
+++ b/diagnostica.html
@@ -67,28 +67,27 @@
     </header>
 
     <main>
-
         <section>
             <div class="bg-main">
-                <div class="bg-content">
-                    <h2>Engenharia Diagnóstica</h2>
-                    <h6>A equipe da <span>SEECON ENGENHARIA</span> segue rigorosas normas nacionais e internacioanis 
-                        quanto a vistoria de imóveis comerciais e residenciais. Realizamos diversos tipos de 
-                        vistorias para construtoras, condomínios e lojas comerciais. </h6>
-                    <div class="button-wpp-inicial">
-                        <a href="#"> 
-                            <img src="./images/whatsapp.png"></img>
-                            Fale conosco
-                        </a>
+                    <div class="bg-content">
+                        <h2>Engenharia Diagnóstica</h2>
+                        <h6>A equipe da <span>SEECON ENGENHARIA</span> segue rigorosas normas nacionais e internacioanis 
+                            quanto a vistoria de imóveis comerciais e residenciais. Realizamos diversos tipos de 
+                            vistorias para construtoras, condomínios e lojas comerciais. </h6>
+                        <div class="button-wpp-inicial">
+                            <a href="#"> 
+                                <img src="./images/whatsapp.png"></img>
+                                Fale conosco
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="eng-seecon">
-                    <img src="./images/eng-seecon.png">
-                </div>
+                    <div class="eng-seecon">
+                        <img src="./images/eng-seecon.png">
+                    </div>
             </div>
         </section>
 
-        <section class="inspeção">
+        <article class="inspeção">
             <h2>Inspeção Predial</h2>
             <div class="container insp-container">
                 <div class="item-info">
@@ -138,12 +137,12 @@
                           padrão</p>
                 </div>
             </div>
-        </section>
+        </article>
 
         <section class="vistoria">
             <h2>Vistoria Predial</h2>
                 <div class="vist-container">
-                    <div class="col-6 vistoria-text">
+                    <div class="col-sm-6 col-12 vistoria-text">
                         <h4>Laudos de Vistoria Técnica</h4>
                         <p>O laudo de vistória técnica é um documento <span>obrigatório</span> por lei nº 2.765/99 com finalidade 
                             de verificar o espaço físico de conservação das edificações, bem como os equipamentos de prevenção e 
@@ -153,7 +152,7 @@
                         <p>Este laudo é válido para emissão de certidão das condições de uso e conservação da edificação vistoriada,
                             tornando mais segura a habitação.</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-sm-6 col-12 vist-itens">
                         <div class="vist-item">
                             <img src="images/doc.png">
                             <p>Atestado de desempenho e integridade dos subsistemas prediais</p>
@@ -170,13 +169,12 @@
                             <img src="images/doc.png">
                             <p>Atestado de desempenho e integridade dos subsistemas prediais</p>
                         </div>
-                        
                     </div>
                 </div>
         </section>
 
         <section class="laudos">
-                <h2>Ultimos laudos  de vistorias e inspeções</h2>
+                <h2>Últimos laudos  de vistorias e inspeções</h2>
                     <div class="slider">
                         <ul id="autoWidth" class="cs-hidden">
                             <li class="item-a">
@@ -341,7 +339,7 @@
         </div>
 
         <section class="autovistoria">
-            <h2>Autovistoria Predial</h2>
+            <h2>Autovistoria Condominial</h2>
             <h6>A autovistoria capacita o morador para que ele possa avaliar o estado geral do seu apartamento no que diz respeito a sua conservação, estabilidade e segurança</h6>
             <div class="autovistoria-list">
                 <div class="autovistoria-item">
