--- a/estrutural.html
+++ b/estrutural.html
@@ -202,7 +202,9 @@
                             estrutural </h4>
                     </div>
                     <div class="card-numeros">
-                        <img src="./images/plus-circle.png">
+                            <a href="https://www.instagram.com/seecon_engenharia/" target="_blank" >
+                                <img src="./images/plus-circle.png">
+                            </a>
                         <br>
                         <h4>Veja nosso portfólio</h4>
                     </div>
@@ -216,7 +218,7 @@
                 <p>Através de uma análise criteriosa do projeto arquitetônico, 
                     realizamos uma concepção estrutural viável e coerente que atende a 
                     necessidade de cada cliente. Durante o desenvolvimento do projeto a 
-                    equipe de engenheiros da SEECON Engenharia elabora as melhores soluções estruturais e 
+                    equipe de engenheiros da Seecon Engenharia elabora as melhores soluções estruturais e 
                     escolhe as técnicas construtivas mais seguras para suas soluções estruturais, 
                     sempre prezando pelo custo benefício da tecnologia adotada. </p>
             </div>
@@ -278,8 +280,8 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Parabéns a equipe técnica pelo excelente trabalho realizado no Condomínio Costa Norte na Vistoria dos nossos sistemas prediais que trará mais tranquilidade e certeza de  que o patrimônio de cada um está mais seguro e, trazendo melhoria na qualidade de vida dentro do condomínio 
-                            </p>
+                                Deixo aqui meu elogio a equipe da Seecon Engenharia pessoas muito atenciosas, 
+                                desde a recepção até a execução das solicitações.</p>
                         </div>
                     </li>
                     <li class="item-a">
@@ -299,7 +301,9 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Muito obrigado pela excelência na elaboração do laudo de vistoria, verificando todas as dependências vulneráveis do condomínio.
+                                “Estou super satisfeita com a Seecon e confio muito no trabalho realizado. 
+                                É uma empresa séria, comprometida e que respeita muito bem os seus prazos! e o melhor, é 
+                                onde sempre sou muito bem atendida por todos”
                             </p>
                         </div>
                     </li>
@@ -308,7 +312,7 @@
                             <div class="clientes-cabecalho">
                                 <img src="images/user.png" alt="cliente">
                                 <div class="clientes-infos">
-                                    <span>Marcos</span>
+                                    <span>Telmo</span>
                                     <p>Síndico - Edf. Palm Springs</p>
                                     <div class="stars">
                                         <img src="images/star.png" alt="estrelas">
@@ -320,17 +324,18 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Deixo aqui meu elogio a equipe da Seecon Engenharia, pessoas muito atenciosas, desde a recepção até a execução das solicitações. Parabéns a todos pelo excelente atendimento.
+                                Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria dos nossos sistemas prediais que trará mais tranquilidade e certeza de  que o patrimônio de cada um está mais seguro e, trazendo melhoria na qualidade de vida dentro do condomínio 
                             </p>
                         </div>
                     </li>
+
             </div>
         </section>
 
         <section class="seecon">
             <div class="content-seecon col-6">
                 <img src="./images/logo.png">
-                <h4>Única empresa credenciada em Sergipe! &nbsp<img src="./images/sergipe.png"> </h4> 
+                <h4>Única empresa credenciada em Sergipe! &nbsp<img id="sergipe" src="./images/sergipe.png"> </h4> 
             </div>
             <div class="abece col-6">
                 <img src="./images/abece.png">
