--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!----hero-->
         <section>
             <div class='img-fluid' id="hero">
-                <div class="infos-hero col-7">
+                <div class="infos-hero col-sm-7 col-12">
                     <div class="texts-hero">
                         <h2>Vai construir ou reformar? </h2>
                         <br>
@@ -76,7 +76,7 @@
                     </div>
                     <a href="contato.html" class="button">Entre em contato</a>
                 </div>
-                <div class="col-6"></div>
+                <div class="col-sm-6"></div>
             </div>
         </section>
 
