--- a/seniorliving.html
+++ b/seniorliving.html
@@ -72,7 +72,7 @@
                 <div class="bg-main">
                     <div class=" col-6"></div>
                     <div class=" col-6 bg-content">
-                        <img src="./images/senior-logo.png">
+                        <img id="senior-logo" src="./images/senior-logo.png">
                         <h6>Senior Living é um mix entre o mercado imobiliário, de hospitalidade e o de cuidados. É a habitação para pessoas na melhor idade que trás um novo conceito em conforto.<br>
                             <br>Tudo isso, em local especializado que atenda suas necessidades ao mesmo tempo que alia serviços e experiência.</h6>
                         <div class="button-wpp">
@@ -83,24 +83,20 @@
                         </div>
                     </div>  
                 </div>
-                <div class="created">
-                    <a href="https://github.com/Lincoln-Modesto" target="_blank">
-                        <img src="images/github.png">
-                        <span>&nbsp Lincoln Modesto</span>
-                    </a>
-                </div>
             </section>
 
             <section id="section-texts">
                 <div class="col-4 img-casal">
                     <img id="casal" class="img-fluid" src="images/senior2.png">
                 </div>
-                <div class="col-7 senior-texts">
-                    <p>Nós da <span>SEECON ENGENHARIA</span>, pensamos e entedemos as necessidades dos idosos e de 
-                        portadores de necessidades especiais para criar soluções imobiliárias que 
-                        venham a proporcionar maior mobilidade, conforto e sensação de bem estar. </p>
-                    <br>
-                    <p>Dessa forma, oferecemos os serviços de:</p>
+                <div class=" senior-texts">
+                    <div>
+                        <p>Nós da <span>SEECON ENGENHARIA</span>, pensamos e entedemos as necessidades dos idosos e de 
+                            portadores de necessidades especiais para criar soluções imobiliárias que 
+                            venham a proporcionar maior mobilidade, conforto e sensação de bem estar. </p>
+                        <br>
+                        <p>Dessa forma, oferecemos os serviços de:</p>
+                    </div>
                     <ul class="senior-list">
                         <li>
                             Retrofit e modernização de ambientes;
@@ -145,47 +141,47 @@
 
             <section class="main-form">
                 <h2>Entre em contato e solicite uma visita!</h2>
-                <div class="main-form-content">
-                    <div class="col-6">
-                        <form class="form form-group">
-                            <h6>Entre em contato</h6>
-                            <div class="form-group">
-                                <label >Nome</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input class="form-control" type="email">
-                            </div>
-                            <div class="form-group">
-                                <label>Telefone</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            <div class="form-group">
-                                <label>Mensagem</label>
-                                <textarea class="form-control" rows="3"></textarea>
-                            </div>
-                            <div class="button-send">
-                                <a href="#">Enviar</a>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-6">
-                        <div class="form-infos">
-                            <h4>Um novo conceito em conforto!</h4>
-                            <h6>Contate-nos para descobrir as melhores soluções construtivas em sênior living</h6>
-                            <img class="img-fluid estrutural" src="images/senior-logo.png">
-                            <div class="container-form-info">    
-                                <span>Mande uma mensagem mensagem no nosso WhatsApp</span>
-                                <div class="button-wpp">
-                                    <a href="#"> 
-                                        <img src="./images/whatsapp.png"></img>
-                                        Fale conosco
-                                    </a>
+                    <div class="main-form-content">
+                        <div class="col-6">
+                            <form class="form form-group">
+                                <h6>Entre em contato</h6>
+                                <div class="form-group">
+                                    <label >Nome</label>
+                                    <input class="form-control" type="text">
+                                </div>
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input class="form-control" type="email">
+                                </div>
+                                <div class="form-group">
+                                    <label>Telefone</label>
+                                    <input class="form-control" type="text">
+                                </div>
+                                <div class="form-group">
+                                    <label>Mensagem</label>
+                                    <textarea class="form-control" rows="3"></textarea>
+                                </div>
+                                <div class="button-send">
+                                    <a href="#">Enviar</a>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-infos">
+                                <h4>Um novo conceito em conforto!</h4>
+                                <h6>Contate-nos para descobrir as melhores soluções construtivas em sênior living</h6>
+                                <img class="img-fluid estrutural" src="images/senior-logo.png">
+                                <div class="container-form-info">    
+                                    <span>Mande uma mensagem mensagem no nosso WhatsApp</span>
+                                    <div class="button-wpp">
+                                        <a href="#"> 
+                                            <img src="./images/whatsapp.png"></img>
+                                            Fale conosco
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
             </section>
             <div class="bg-aqua"></div>
         </main>
@@ -219,6 +215,12 @@
                             <img src="./images/youtube.png">
                         </a>
                     </div> 
+                </div>
+                <div class="created">
+                    <a href="https://github.com/Lincoln-Modesto" target="_blank">
+                        <img src="images/github.png">
+                        <span>&nbsp Lincoln Modesto</span>
+                    </a>
                 </div>
         </footer>
     </body>
