--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@
     <!----hero-->
     <section>
         <div class='img-fluid' id="hero">
-            <div class="infos-hero col-7">
+            <div class="infos-hero col-sm-7 col-12">
                 <div class="texts-hero">
                     <h2>Vai construir ou reformar? </h2>
                     <br>
@@ -73,7 +73,7 @@
                 </div>
                 <a href="#" class="button">Entre em contato</a>
             </div>
-            <div class="col-6"></div>
+            <div class="col-sm-6"></div>
         </div>
     </section>
 
@@ -81,8 +81,8 @@
     <main>
         
         <section class="main-home">
+            <h2>Clientes comerciais</h2>
             <div class="clients">
-                <h2>Clientes comerciais</h2>
                 <img src="./images/clientes.png">
                 <img id="clients-2"src="./images/clientes2.png">
             </div>
@@ -117,9 +117,9 @@
                 </div>
                 <div class="col-6">
                     <div class="form-infos" >
-                        <h4>Possuímos uma equipe pronta para te atender da melhor maneira possível!</h4>
+                        <h4 id="h4-form">Possuímos uma equipe pronta para te atender da melhor maneira possível!</h4>
                         <br>
-                        <h4 id="h4-form">Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do formulário ao lado</h4>
+                        <h4>Mande uma mensagem mensagem no nosso <span>WhatsApp</span> ou entre em contato através do formulário</h4>
                        <div class="container">    
                             <div class="button-wpp">
                                 <a href="#"> 
