--- a/estrutural.html
+++ b/estrutural.html
@@ -312,7 +312,7 @@
                             <div class="clientes-cabecalho">
                                 <img src="images/user.png" alt="cliente">
                                 <div class="clientes-infos">
-                                    <span>Telmo</span>
+                                    <span>Sebastião</span>
                                     <p>Síndico - Edf. Palm Springs</p>
                                     <div class="stars">
                                         <img src="images/star.png" alt="estrelas">
@@ -324,7 +324,9 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria dos nossos sistemas prediais que trará mais tranquilidade e certeza de  que o patrimônio de cada um está mais seguro e, trazendo melhoria na qualidade de vida dentro do condomínio 
+                                Parabéns a equipe técnica da Seecon pelo excelente trabalho realizado na Vistoria 
+                                dos nossos sistemas prediais! trazendo mais tranquilidade e certeza de  que o 
+                                patrimônio de cada um está mais seguro.
                             </p>
                         </div>
                     </li>
