--- a/seniorliving.html
+++ b/seniorliving.html
@@ -166,7 +166,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-6">
+                        <div class="col-md-6">
                             <div class="form-infos">
                                 <h4>Um novo conceito em conforto!</h4>
                                 <h6>Contate-nos para descobrir as melhores soluções construtivas em sênior living</h6>
