--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 <div class="main-list">
                     <h2>Expertise em Engenharia</h2>
                     <ul>
-                        <li>Recuperação e Reforço Estrutural;;</li>
+                        <li>Recuperação e Reforço Estrutural;</li>
                         <li>Autovistoria e Inspeções Condominial;</li>
                         <li>Laudos e Engenharia Diagnóstica;</li>
-                        <li>Senior Living;</li>  
+                        <li>Senior Living.</li>  
                     </ul>
                 </div>
             </section>
