--- a/seniorliving.html
+++ b/seniorliving.html
@@ -91,8 +91,8 @@
                 </div>
                 <div class=" senior-texts">
                     <div>
-                        <p>Nós da <span>SEECON ENGENHARIA</span>, pensamos e entedemos as necessidades dos idosos e de 
-                            portadores de necessidades especiais para criar soluções imobiliárias que 
+                        <p>Nós da <span>SEECON ENGENHARIA</span> pensamos e entedemos as necessidades dos idosos e de 
+                            portadores de necessidades especiais. Para isso, buscamos entregar soluções imobiliárias que 
                             venham a proporcionar maior mobilidade, conforto e sensação de bem estar. </p>
                         <br>
                         <p>Dessa forma, oferecemos os serviços de:</p>
