--- a/contato.html
+++ b/contato.html
@@ -69,8 +69,10 @@
                 <div class="texts-hero">
                     <h2>Vai construir ou reformar? </h2>
                     <br>
-                    <h2>Precisa realizar vistorias ou <br>
+                    <h2>Precisa de laudos de vistorias ou <br>
                         inspeções prediais?</h2>
+                    <br>
+                    <h2>Sua edificação necessita de reparos?</h2>
                 </div>
                 <a href="#" class="button">Entre em contato</a>
             </div>
