--- a/diagnostica.html
+++ b/diagnostica.html
@@ -429,7 +429,7 @@
                                 </div>
                             </div>
                             <p class="cliente-avaliacao">
-                                "Trabalho bem elaborado, com excelente técnica. Presteza no atendimento e envio de toda documentação no prazo estipulado com explicações claras e precisas. O acompanhamento é feito durante todo o processo. Parabéns pelo esmero na prestação de serviços."
+                                "Trabalho bem elaborado, com excelente técnica. Presteza no atendimento e envio de toda documentação no prazo estipulado com explicações claras e precisas. O acompanhamento é feito durante todo o processo."
                             </p>
                         </div>
                     </li>
